feat: implement SSL configuration to trust all certificates for RestClients